# sast-evento

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  app.manifest  flake.nix  vcpkg-configuration.json  vcpkg.json
.cmake/: InstallerScript.iss.in  Version.cmake  version_exe.rc.in
.github/: dependabot.yml
.github/workflows/: build.yml  clang-tidy-review.yml  codeql.yml  cpp-linter.yml  format-check.yml  nightly.yml
deploy/: create-deb.sh  create-mac-app.sh  organize-artifacts.sh  sast-evento.desktop  win-installer.iss
deploy/create-appimage/: __main__.py  elf_dependencies.py  grouping.py
deploy/pacman/: PKGBUILD
doc/: README_zh.md
nix/: sast-evento.nix  slint-bin.nix  slint.nix  slint.nix~
nix/patches/: 0001-disable-download-corrosion-from-net.patch
scripts/: windows-publish.ps1
src/: CMakeLists.txt  main.cc
src/Controller/: AsyncExecutor.hh  Convert.cc  Convert.h  Convert.hh  UiBridge.cc  UiBridge.h
src/Controller/Core/: AccountManager.cc  AccountManager.h  BasicView.h  GlobalAgent.hh  GlobalAgent.hpp  MessageManager.cc  MessageManager.h  UiBase.h  UiUtility.cc  UiUtility.h  ViewManager.cc  ViewManager.h
src/Controller/View/: AboutPage.cc  AboutPage.h  DetailPage.cc  DetailPage.h  DiscoveryPage.cc  DiscoveryPage.h  HistoryPage.cc  HistoryPage.h  LoginOverlay.cc  LoginOverlay.h  MenuOverlay.cc  MenuOverlay.h  MyEventPage.cc  MyEventPage.h  SearchPage.cc  SearchPage.h  SettingPage.cc  SettingPage.h
src/Infrastructure/Cache/: Cache.cc  Cache.h
src/Infrastructure/IPC/: SocketClient.cc  SocketClient.h
src/Infrastructure/Network/: HttpsAccessManager.cc  HttpsAccessManager.h  NetworkAccessManager.cc  NetworkAccessManager.h  NetworkClient.cc  NetworkClient.h  ResponseStruct.h  network.cc  network.h
src/Infrastructure/Network/Api/: Evento.hh  Evento.hpp  Github.hh  Github.hpp
src/Infrastructure/Network/Response/: AttachmentEntity.h  ContributorEntity.h  DepartmentEntity.h  DepartmentEntityV1.h  DepartmentInfoEntity.h  EventEntity.h  EventEntityV1.h  EventListEntity.h  EventQueryRes.h  EventState.h  EventStateV1.h  FeedbackEntity.h  FeedbackEntityV1.h  LoginResEntity.h  LoginResEntityV1.h  ParticipateEntityV1.h  ReleaseEntity.h  SlideEntity.h  SlideEntityV1.h  StdOptional.h  UserInfoEntity.h  UserInfoEntityV1.h
src/Infrastructure/System/: Cpu.cc  Cpu.h  Crash.cc  Crash.h  Memory.cc  Memory.h  Os.cc  Os.h  Signal.cc  Signal.h  Wm.cc  Wm.h
src/Infrastructure/Tray/: SystemTray.h
src/Infrastructure/Utils/: Config.h  Debug.h  Error.h  Logger.h  Logger.hh  Result.h  Tools.h
src/Tray/: CMakeLists.txt  TcpServer.cc  TcpServer.cpp  TcpServer.h  main.cc  main.cpp  res.qrc
src/ui/: UiBridge.cc  UiBridge.h
src/ui/Core/: BasicView.h  GlobalAgent.hpp  UiBase.h  ViewManager.cc  ViewManager.h
src/ui/View/: AboutPage.cc  AboutPage.h  DetailPage.cc  DetailPage.h  DiscoveryPage.cc  DiscoveryPage.h  HistoryPage.cc  HistoryPage.h  LoginOverlay.cc  LoginOverlay.h  MenuOverlay.cc  MenuOverlay.h  MyEventPage.cc  MyEventPage.h  SearchPage.cc  SearchPage.h  SettingPage.cc  SettingPage.h
ui/: app.slint  global.slint  index.slint
ui/assets/: index.slint
ui/assets/image/: image_token.slint
ui/assets/image/icon/: app.icns
ui/components/: ContentDialog.slint  animation.slint  button.slint  card.slint  content_dialog.slint  event_card.slint  event_struct.slint  feedback_struct.slint  hello.slint  index.slint  page_state_layer.slint  rate_stars.slint  state_layer.slint  styled_text.slint  toast.slint  view_base.slint
ui/locale/: en.po  zh.po
ui/locale/zh/LC_MESSAGES/: zh.po
ui/logic/: account_manager.slint  color_viewer.slint  index.slint  md_style_token.slint  message_manager.slint  style_token.slint  view_manager.slint
ui/views/: index.slint  main.slint
ui/views/overlay/: login.slint  menu.slint
ui/views/page/: about.slint  detail.slint  discovery.slint  history.slint  my_event.slint  search.slint  setting.slint
